Kubernetes/Azure/todo-api-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deployment
  namespace: todo-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: todo-api
          image: <Container Image>
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "500m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
          ports:
            - containerPort: 80
