Kubernetes/Azure/todo-web-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-web-deployment
  namespace: todo-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-web
  template:
    metadata:
      labels:
        app: todo-web
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: todo-web
          image: <Container Image>
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "500m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
          ports:
            - containerPort: 80
