Kubernetes/Azure/todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
  namespace: todo-ns
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: todo-api
