Kubernetes/Azure/todo-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web-service
  namespace: todo-ns
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: todo-web
